apps/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    haproxy.org/rate-limit-requests: "15"
spec:
  ingressClassName: haproxy
  rules:
    - host: argocd.manickam.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 8080
